@startuml

title __PROGETTO PROGRAMMAZIONE AD OGGETTI JAVA's Class Diagram__\n


    class MavenWrapperDownloader {
    }

  

    namespace com.example.progetto {
      class com.example.progetto.ProgettoApplication {
      }
    }

  

    namespace com.example.progetto {
      namespace Spring {
        class com.example.progetto.Spring.DataCsvRow {
        }
      }
    }

  


    namespace com.example.progetto {
      namespace Spring {
        class com.example.progetto.Spring.DataCsvRowController {
        }
      }
    }

  


    namespace com.example.progetto {
      namespace Spring {
        class com.example.progetto.Spring.DataCsvRowServices {
        }
      }
    }

  

    namespace com.example.progetto {
      namespace Spring {
        class com.example.progetto.Spring.FilterParameter {
        }
      }
    }

    namespace com.example.progetto {
      namespace Spring {
        class com.example.progetto.Spring.NumberStats {
        }
      }
    }

    namespace com.example.progetto {
      namespace csvClasses {
        class com.example.progetto.csvClasses.DataCsv {
        }
      }
    }

    namespace com.example.progetto {
      namespace csvClasses {
        namespace csvRetrieve {
          class com.example.progetto.csvClasses.csvRetrieve.CsvSplitter {
          }
        }
      }
    }

    namespace com.example.progetto {
      namespace csvClasses {
        namespace csvRetrieve {
          class com.example.progetto.csvClasses.csvRetrieve.CsvValidator {
          }
        }
      }
    }

    namespace com.example.progetto {
      namespace csvClasses {
        namespace csvRetrieve {
          class com.example.progetto.csvClasses.csvRetrieve.GetCsvDataFromUrl {
          }
        }
      }
    }

    namespace com.example.progetto {
      namespace csvClasses {
        namespace csvRetrieve {
          class com.example.progetto.csvClasses.csvRetrieve.GetCsvUrlFromJsonUrl {
          }
        }
      }
    }

    namespace com.example.progetto {
      namespace csvClasses {
        namespace csvRetrieve {
          class com.example.progetto.csvClasses.csvRetrieve.ReadLineFromBufferedReader {
          }
        }
      }
    }

    namespace com.example.progetto {
      namespace csvClasses {
        namespace dataType {
          class com.example.progetto.csvClasses.dataType.Metadata {
          }
        }
      }
    }

    namespace com.example.progetto {
      namespace csvClasses {
        namespace dataType {
          class com.example.progetto.csvClasses.dataType.ObjArray {
          }
        }
      }
    }

    namespace com.example.progetto {
      namespace csvClasses {
        namespace dataType {
          class com.example.progetto.csvClasses.dataType.PrintClass {
          }
        }
      }
    }

    namespace com.example.progetto {
      namespace csvClasses {
        namespace dataType {
          class com.example.progetto.csvClasses.dataType.UrlWithDescription {
          }
        }
      }
    }

  

  com.example.progetto.csvClasses.csvRetrieve.CsvSplitter o-- com.example.progetto.csvClasses.csvRetrieve.GetCsvDataFromUrl : csv
  com.example.progetto.csvClasses.csvRetrieve.GetCsvDataFromUrl o-- com.example.progetto.csvClasses.csvRetrieve.ReadLineFromBufferedReader : br


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
